--- a/style.css
+++ b/style.css
@@ -63,9 +63,18 @@ header{
     cursor: pointer;
 }
 
+
 .hero{
     margin-top: 3rem;
-    display: flex;
-    justify-content: center;
+    padding-bottom: 3rem;
+    display: grid;
+    grid-auto-columns: 1fr;
+    grid-auto-flow: column;
+    
     
 }
+.hero__texts{
+    width: 70%;
+}
+
+
