--- a/style.css
+++ b/style.css
@@ -92,7 +92,25 @@ header{
     color: var(--secondaryColor);
     background-color: var(--buttonColor);
     padding: 0.2rem 0.8rem;
-    border-radius: 5px;
+    border-radius: 0.3rem;
+}
+
+.abt--main-txt{
+    text-align: center;
+    color: var(--darkColor);
+    margin-top: 2em;
+    margin-bottom: 2em;
+}
+.deals{
+    display: grid;
+    grid-auto-columns: 1fr;
+    grid-auto-flow: column;
+    margin-bottom: 2em;
+}
+
+.gallery{
+    text-align: center;
+    padding: 1rem;
 }
 
 
