--- a/style.css
+++ b/style.css
@@ -12,10 +12,15 @@
 }
 body{
     font-family: var(--myFont);
+    transition: all 0.3s ease-in;
 }
 .container{
     margin-left: 10%;
     margin-right: 10%;
+}
+.container2{
+    margin-left: 15%;
+    margin-right: 15%;
 }
 img {
     max-width: 100%;
@@ -103,14 +108,39 @@ header{
 }
 .deals{
     display: grid;
+    gap: 2em;
     grid-auto-columns: 1fr;
     grid-auto-flow: column;
-    margin-bottom: 2em;
+    margin-bottom: 4em;
 }
 
 .gallery{
     text-align: center;
-    padding: 1rem;
+    
+}
+.gallery img{
+    border-radius: 0.3em;
+}
+.cb{
+    background-color: var(--secondaryColor);
+}
+.testimonials{
+    padding-top: 4em;
+    padding-bottom: 4em;
+}
+
+.testimony{
+    color: var(--darkColor);
+    line-height: 1.5;
+    font-weight: lighter;
+    font-size: 1.3rem;
+
+}
+.test--name{
+    text-align: right;
+    color: var(--darkColor);
+    font-size: 1.2rem;
+
 }
 
 
